--- a/app/src/main/res/layout/dlg_product_detail.xml
+++ b/app/src/main/res/layout/dlg_product_detail.xml
@@ -89,7 +89,7 @@
             android:layout_marginTop="@dimen/elmnt_gap_lg"
             android:layout_marginEnd="1dp"
             android:hint="@string/title_product_price"
-            app:endIconMode="clear_text"
+            app:prefixText="₱"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtLayoutDlgProductName">
@@ -111,7 +111,6 @@
             android:layout_marginTop="@dimen/elmnt_gap_lg"
             android:layout_marginEnd="1dp"
             android:hint="@string/title_product_quantity"
-            app:endIconMode="clear_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtLayoutDlgProductPrice">
