--- a/app/src/main/res/layout/frg_admin_tools.xml
+++ b/app/src/main/res/layout/frg_admin_tools.xml
@@ -36,7 +36,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblDescription"
-        tools:listitem="@layout/list_machine"/>
+        tools:listitem="@layout/list_transaction"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
