--- a/app/src/main/res/layout/list_product.xml
+++ b/app/src/main/res/layout/list_product.xml
@@ -32,6 +32,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:orientation="vertical"
             android:padding="7dp">
 
@@ -40,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/lato_bold"
                 android:text="@string/placeholder"
                 android:textColor="@color/neutral_900"
                 android:textSize="@dimen/text_md"
@@ -51,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dp"
-                android:fontFamily="@font/roboto"
+                android:fontFamily="@font/lato"
                 android:text="@string/placeholder"
                 android:textColor="@color/neutral_500"
                 android:textSize="@dimen/text_sm"
