--- a/app/src/main/res/layout/list_product_admin.xml
+++ b/app/src/main/res/layout/list_product_admin.xml
@@ -32,6 +32,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:orientation="vertical"
             android:padding="7dp">
 
@@ -39,7 +40,7 @@
                 android:id="@+id/lblListProductAdminNameAndPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/lato_bold"
                 android:text="@string/placeholder"
                 android:textColor="@color/neutral_900"
                 android:textSize="@dimen/text_md"
@@ -50,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dp"
-                android:fontFamily="@font/roboto"
+                android:fontFamily="@font/lato"
                 android:text="@string/placeholder"
                 android:textColor="@color/neutral_500"
                 android:textSize="@dimen/text_sm"
@@ -61,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dp"
-                android:fontFamily="@font/roboto"
+                android:fontFamily="@font/lato"
                 android:text="@string/placeholder"
                 android:textColor="@color/neutral_500"
                 android:textSize="@dimen/text_sm"
@@ -80,7 +81,7 @@
             app:strokeWidth="0dp">
 
             <ImageButton
-                android:id="@+id/btnListEdit"
+                android:id="@+id/btnListProductEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
