--- a/app/src/main/res/layout/list_transaction.xml
+++ b/app/src/main/res/layout/list_transaction.xml
@@ -1,69 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="12dp">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/elmnt_gap_md"
+    android:backgroundTint="@color/white"
+    app:cardCornerRadius="@dimen/radius_md"
+    app:cardElevation="0dp"
+    app:strokeColor="@color/neutral_300"
+    app:strokeWidth="1dp">
 
-    <ImageView
-        android:id="@+id/imgTransaction"
-        style="@style/Circle_Lg_50"
-        android:src="@null"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imgTransaction"
-        app:layout_constraintStart_toEndOf="@+id/imgTransaction"
-        app:layout_constraintTop_toTopOf="@+id/imgTransaction">
+        android:orientation="horizontal"
+        android:padding="@dimen/elmnt_gap_xl"
+        tools:ignore="ExtraText">
 
-        <TextView
-            android:id="@+id/lblTransactionType"
+        <ImageView
+            android:id="@+id/imgListTransaction"
+            style="@style/Circle_Lg_50"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/elmnt_gap_md"
+            android:clickable="false"
+            android:src="@drawable/ic_product"
+            tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical"
+            android:padding="7dp">
+
+            <TextView
+                android:id="@+id/lblListTransactionType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="1dp"
+                android:fontFamily="@font/lato"
+                android:text="@string/placeholder"
+                android:textColor="@color/neutral_500"
+                android:textSize="@dimen/text_sm"
+                tools:ignore="TextContrastCheck" />
+
+            <TextView
+                android:id="@+id/lblListTransactionNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_bold"
+                android:text="@string/placeholder"
+                android:textColor="@color/neutral_900"
+                android:textSize="@dimen/text_md"
+                tools:ignore="TextContrastCheck" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:fontFamily="@font/roboto_bold"
-            android:text="@string/t1"
-            android:textColor="@color/neutral_900"
-            android:textSize="@dimen/text_md"
-            app:layout_constraintBottom_toTopOf="@+id/lblTransactionDate"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="TextContrastCheck" />
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical"
+            android:gravity="end"
+            android:padding="7dp">
 
-        <TextView
-            android:id="@+id/lblTransactionDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            android:fontFamily="@font/roboto"
-            android:text="@string/t2"
-            android:textColor="@color/neutral_500"
-            android:textSize="@dimen/text_sm"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lblTransactionType"
-            tools:ignore="TextContrastCheck" />
+            <TextView
+                android:id="@+id/lblListTransactionDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="1dp"
+                android:fontFamily="@font/lato"
+                android:text="@string/placeholder"
+                android:textColor="@color/neutral_500"
+                android:textSize="@dimen/text_sm"
+                tools:ignore="TextContrastCheck" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/lblListTransactionAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_bold"
+                android:text="@string/placeholder"
+                android:textColor="@color/neutral_900"
+                android:textSize="@dimen/text_md"
+                tools:ignore="TextContrastCheck" />
 
-    <TextView
-        android:id="@+id/lblTransactionValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_bold"
-        android:text="@string/t3"
-        android:textColor="@color/neutral_900"
-        android:textSize="@dimen/text_md"
-        app:layout_constraintBottom_toBottomOf="@+id/imgTransaction"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imgTransaction"
-        tools:ignore="TextContrastCheck" />
+        </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<!--        <com.google.android.material.card.MaterialCardView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center_vertical"-->
+<!--            android:layout_marginStart="@dimen/elmnt_gap_md"-->
+<!--            android:backgroundTint="@color/neutral_300"-->
+<!--            app:cardCornerRadius="8dp"-->
+<!--            app:cardElevation="0dp"-->
+<!--            app:strokeWidth="0dp">-->
+
+<!--            <ImageButton-->
+<!--                android:id="@+id/btnListTransactionView"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="@null"-->
+<!--                android:padding="8dp"-->
+<!--                android:src="@drawable/ic_receipt"-->
+<!--                tools:ignore="ContentDescription,TouchTargetSizeCheck,SpeakableTextPresentCheck" />-->
+
+<!--        </com.google.android.material.card.MaterialCardView>-->
+
+    </LinearLayout>
+
+</com.google.android.material.card.MaterialCardView>
