Added status for vendo and status

--- a/app/src/main/res/layout/act_send_money.xml
+++ b/app/src/main/res/layout/act_send_money.xml
@@ -68,7 +68,7 @@
             android:id="@+id/txtAmount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
     </com.google.android.material.textfield.TextInputLayout>
 
