--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="neutral_300">#FFEFEFF2</color>
     <color name="neutral_400">#60000000</color>
     <color name="neutral_500">#FF757575</color>
-    <color name="neutral_700">#FF575757</color>
+    <color name="neutral_700">#9E9E9E</color>
     <color name="neutral_900">#FF323232</color>
     <color name="accent_50">#E0F2F1</color>
     <color name="accent_100">#A5D6CE</color>
