--- a/app/src/main/res/layout/act_machine.xml
+++ b/app/src/main/res/layout/act_machine.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActMachine"
-    android:id="@+id/mainLayout">
+    tools:context=".ActMachine">
 
     <ImageButton
         android:id="@+id/btnBack"
@@ -47,10 +47,11 @@
             <TextView
                 android:id="@+id/lblDescVendoID"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/elmnt_gap_md"
+                android:layout_height="wrap_content"
                 android:text="@string/placeholder"
                 android:textColor="@color/neutral_900"
+                app:layout_constraintEnd_toStartOf="@+id/btnVendoDetailEdit"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="VisualLintLongText,VisualLintOverlap" />
@@ -59,38 +60,27 @@
                 android:id="@+id/lblDescVendoLocation"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:layout_marginEnd="@dimen/elmnt_gap_md"
+                android:layout_marginTop="8dp"
                 android:text="@string/placeholder"
                 android:textColor="@color/neutral_900"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btnVendoDetailEdit"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lblDescVendoID"
                 tools:ignore="VisualLintLongText" />
 
-            <com.google.android.material.card.MaterialCardView
+            <ImageView
+                android:id="@+id/btnVendoDetailEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:backgroundTint="@color/neutral_300"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="0dp"
+                android:background="@drawable/bg_squircle_300"
+                android:padding="8dp"
+                android:src="@drawable/ic_edit"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:strokeWidth="0dp"
-                tools:ignore="DuplicateClickableBoundsCheck,TouchTargetSizeCheck">
-
-                <ImageButton
-                    android:id="@+id/btnVendoDetailEdit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:padding="8dp"
-                    android:src="@drawable/ic_edit"
-                    tools:ignore="ContentDescription,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-
-            </com.google.android.material.card.MaterialCardView>
+                tools:ignore="ContentDescription,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
