--- a/app/src/main/res/layout/dlg_product_detail.xml
+++ b/app/src/main/res/layout/dlg_product_detail.xml
@@ -98,7 +98,7 @@
                 android:id="@+id/txtDlgProductPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
         </com.google.android.material.textfield.TextInputLayout>
 
