--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
 
     <color name="ripple_primary">#FF00796B</color>
     <color name="ripple_secondary">#FFCACACA</color>
+    <color name="ripple_warning">#FFC400</color>
 
     <color name="danger_50">#FCEBE9</color>
     <color name="danger_200">#E77366</color>
