Change Wallet Background

--- a/app/src/main/res/layout/frg_main_settings.xml
+++ b/app/src/main/res/layout/frg_main_settings.xml
@@ -57,7 +57,8 @@
             android:insetTop="0dp"
             android:insetBottom="0dp"
             android:text="@string/btn_view_information"
-            app:icon="@drawable/ic_profile" />
+            app:icon="@drawable/ic_profile"
+            tools:ignore="VisualLintButtonSize" />
 
         <View
             android:layout_width="match_parent"
@@ -67,12 +68,46 @@
         <Button
             android:id="@+id/btnChangePassword"
             style="@style/Btn_Text_Icon"
-            app:icon="@drawable/ic_lock"
+            app:icon="@drawable/ic_key"
             android:insetTop="0dp"
             android:insetBottom="0dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/btn_change_password" />
+            android:text="@string/btn_change_password"
+            tools:ignore="VisualLintButtonSize" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/neutral_300" />
+
+        <Button
+            android:id="@+id/btnChangeWalletBackground"
+            style="@style/Btn_Text_Icon"
+            app:icon="@drawable/ic_picture"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_change_wallet_background"
+            tools:ignore="VisualLintButtonSize" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/neutral_300" />
+
+        <Button
+            android:id="@+id/btnAboutUs"
+            style="@style/Btn_Text_Icon"
+            app:icon="@drawable/ic_info"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_about_us"
+            tools:ignore="VisualLintButtonSize" />
+
 
     </LinearLayout>
 
